--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,4 +1,10 @@
 .tag {
     font-style: italic;
-    font-weight: lighter;
+    font-weight: 150;
+    float: right;
+    font-size: 0.80em;
+}
+
+.tag:before {
+    content: "#tags: ";
 }
