--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -8,3 +8,17 @@
 .tag:before {
     content: "#tags: ";
 }
+
+div.footpara {
+    display: inline-block;
+}
+
+p.footpara {
+    display: inline-block;
+    margin-block-start: 0;
+    padding-left: 5px;
+}
+
+.footdef {
+    display: flex;
+}
